# alps-trail

./: AGENTS.md  README.md  go.mod  main.py  pyproject.toml
.cursor/rules/: 000-project.mdc  003-python.mdc
cmd/alps/: main.go
specs/: ALPS Trail SPEC.md  ALPS.md  template.md
src/: parser.py
